langs/c++/universal/src/compiler/fb/wc2/parser.output
Terminals unused in grammar

    UPPER
    LOWER


Grammar

    0 $accept: list_option END

    1 list_option: END
    2            | list END

    3 list: item
    4     | list item

    5 item: WORD
    6     | NEWLINE
    7     | CHAR


Terminals, with rules where they appear

    END (0) 0 1 2
    error (256)
    UPPER (258)
    LOWER (259)
    WORD <std::string> (260) 5
    NEWLINE (261) 6
    CHAR (262) 7


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    list_option (9)
        on left: 1 2
        on right: 0
    list (10)
        on left: 3 4
        on right: 2 4
    item (11)
        on left: 5 6 7
        on right: 3 4


State 0

    0 $accept: • list_option END

    END      shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3
    CHAR     shift, and go to state 4

    list_option  go to state 5
    list         go to state 6
    item         go to state 7


State 1

    1 list_option: END •

    $default  reduce using rule 1 (list_option)


State 2

    5 item: WORD •

    $default  reduce using rule 5 (item)


State 3

    6 item: NEWLINE •

    $default  reduce using rule 6 (item)


State 4

    7 item: CHAR •

    $default  reduce using rule 7 (item)


State 5

    0 $accept: list_option • END

    END  shift, and go to state 8


State 6

    2 list_option: list • END
    4 list: list • item

    END      shift, and go to state 9
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3
    CHAR     shift, and go to state 4

    item  go to state 10


State 7

    3 list: item •

    $default  reduce using rule 3 (list)


State 8

    0 $accept: list_option END •

    $default  accept


State 9

    2 list_option: list END •

    $default  reduce using rule 2 (list_option)


State 10

    4 list: list item •

    $default  reduce using rule 4 (list)
